--- a/frontend_dwf/src/app/styles/nuevo-libro.css
+++ b/frontend_dwf/src/app/styles/nuevo-libro.css
@@ -89,7 +89,7 @@
   gap: 6px;
 }
 
-.form-group label {
+.form-group .form-group-cant label {
   font-size: 14px;
   color: #555;
   font-weight: normal;
@@ -101,7 +101,16 @@
   border: 1px solid #ddd;
   border-radius: 4px;
   font-size: 14px;
-  width: 100%;
+  width: 85%;
+}
+
+.form-control-cant {
+  height: 32px;
+  padding: 6px 12px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 14px;
+  width: 70%;
 }
 
 .form-control:focus {
