--- a/frontend_dwf/src/app/styles/dashboard.css
+++ b/frontend_dwf/src/app/styles/dashboard.css
@@ -5,6 +5,7 @@
   display: flex;
   min-height: 100vh;
   background-color: #f5f7fb;
+  overflow: hidden;
 }
 
 /* Estilos para el Sidebar */
@@ -109,10 +110,14 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .dashboard-content {
   padding: 20px 30px;
+  flex: 1;
+  overflow-y: auto;
 }
 
 .section-title {
@@ -158,6 +163,7 @@
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
   padding: 20px;
+
 }
 
 .activity-table-container {
@@ -238,3 +244,4 @@
     grid-template-columns: 1fr;
   }
 }
+
