--- a/frontend_dwf/src/app/styles/catalogo.css
+++ b/frontend_dwf/src/app/styles/catalogo.css
@@ -136,7 +136,7 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   padding: 15px;
   max-width: 100%;
- 
+  margin: 0 20px;
 }
 
 /* Botón de cambio de estado */
