--- a/frontend_dwf/src/app/styles/librosactivos.css
+++ b/frontend_dwf/src/app/styles/librosactivos.css
@@ -2,7 +2,7 @@
 
 /* Contenedor principal de Libros Activos */
 .libros-activos-container {
-  padding: 15px 20px;
+  padding: 15px 0;
   flex: 1;
   overflow-y: auto;
   height: calc(100vh - 60px); /* Ajustar según la altura de tu header */
