--- a/frontend_dwf/src/app/styles/pagination.css
+++ b/frontend_dwf/src/app/styles/pagination.css
@@ -7,6 +7,7 @@
 }
 
 .pagination-container {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -125,6 +126,7 @@
   padding: 8px 16px;
   font-weight: 500;
   min-width: 100px;
+  margin: 0 30px;
 }
 
 /* Nuevos estilos para el wrapper */
